# ripoffshaderc

./: Cargo.toml  LICENSE
.github/workflows/: Release.yml
src/: main.rs
